--- a/app/views/battles/index.html.erb
+++ b/app/views/battles/index.html.erb
@@ -1,81 +1,183 @@
 <article class="battle">
-  <div class="wrapper row">
-    <header class="box">
-      <h3>Outfits <em>by Melanie</em></h3>
-      <p>Description of the outfit, classy or casual?</p>
-    </header>
 
-    <section>
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
 
-      <div class="battle-outfit left row">
-        <div class="clothes">
-          <div class="cloth dress"></div>
-          <div class="cloth pants"></div>
-          <div class="cloth shoes"></div>
-          <div class="cloth hat"></div>
-        </div>
-        <div class="image">
-          <%= image_tag "outfit1.png" %>
-        </div>
-      </div>
-
-      <div class="battle-center">
-        <div class="vs">VS</div>
-      </div>
-
-      <div class="battle-outfit right">
-        <div class="image">
-          <%= image_tag "outfit2.png" %>
-        </div>
-        <div class="clothes">
-          <div class="cloth dress"></div>
-          <div class="cloth pants"></div>
-          <div class="cloth shoes"></div>
-          <div class="cloth hat"></div>
-        </div>
-      </div>
-
-    </section>
-  </div>
 </article>
-
 <article class="battle">
-  <div class="wrapper row">
-    <header class="box">
-      <h3>Outfits <em>by Melanie</em></h3>
-      <p>Description of the outfit, classy or casual?</p>
-    </header>
 
-    <section>
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
 
-      <div class="battle-outfit left row">
-        <div class="clothes">
-          <div class="cloth dress"></div>
-          <div class="cloth pants"></div>
-          <div class="cloth shoes"></div>
-          <div class="cloth hat"></div>
-        </div>
-        <div class="image">
-          <%= image_tag "outfit1.png" %>
-        </div>
-      </div>
-
-      <div class="battle-center">
-        <div class="vs">VS</div>
-      </div>
-
-      <div class="battle-outfit right">
-        <div class="image">
-          <%= image_tag "outfit2.png" %>
-        </div>
-        <div class="clothes">
-          <div class="cloth dress"></div>
-          <div class="cloth pants"></div>
-          <div class="cloth shoes"></div>
-          <div class="cloth hat"></div>
-        </div>
-      </div>
-
-    </section>
-  </div>
 </article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+<article class="battle">
+
+  <h2>Outfit n2</h2>
+  <p>Shot by Melanie</p>
+  <p>New York &mdash; Sat, Oct 20</p>
+
+</article>
+
