--- a/app/assets/stylesheets/application/reset.css.scss
+++ b/app/assets/stylesheets/application/reset.css.scss
@@ -1,7 +1,7 @@
 /* HTML5 ✰ Boilerplate
 * ==|== normalize ==========================================================
 */
-
+* { margin: 0; padding: 0; }
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
 audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 audio:not([controls]) { display: none; }
