--- a/app/views/battles/index.html.erb
+++ b/app/views/battles/index.html.erb
@@ -1,183 +1,47 @@
-<article class="battle">
+<%= render "outfits/search_form" %>
 
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
 
-</article>
-<article class="battle">
 
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
+<% 4.times do |i| %>
+<article class="content grey battle">
 
-</article>
-<article class="battle">
 
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
 
-</article>
-<article class="battle">
+  <div class="col col3 data">
+    <div class="first section">
+      <h2>Classy night out</h2>
+    </div>
+    <div class="section">
+      <p class="author">Shot by Melanie</p>
+      <p class="meta">New York &mdash; Sat, Oct 20</p>
+    </div>
+    <div class="section">
+      <p><strong>Description</strong></p>
+      <p class="meta">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      </div>
+    </div>
+    <div class="col col6 relative last">
+      <div class="col col3">
+        <%= image_tag "outfit#{i + 1}.png" %>
+        <div class="items row">
+          <%= link_to "akaka", "", class: "button inset pants" %>
+          <%= link_to "akaka", "", class: "button inset sweat" %>
+          <%= link_to "akaka", "", class: "button inset dress" %>
+        </div>
+      </div>
+      <div class="col col3 last">
+        <%= image_tag "outfit#{i + 2}.png" %>
+        <div class="items row">
+          <%= link_to "akaka", "", class: "button inset pants" %>
+          <%= link_to "akaka", "", class: "button inset dress" %>
+        </div>
+      </div>
+    </div>
 
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
 
-</article>
-<article class="battle">
 
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
+  </article>
 
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
-<article class="battle">
-
-  <h2>Outfit n2</h2>
-  <p>Shot by Melanie</p>
-  <p>New York &mdash; Sat, Oct 20</p>
-
-</article>
+  <% end %>
 
