--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,13 +38,13 @@
             <span class='ico'></span>Decide
           <% end %>
         </h2>
+        <p>Take pictures of your outfits, share them, and we'll help you decide what to wear!</p>
       </div>
 
     </header>
 
-    <div class="content">
-      <%= yield %>
-    </div>
+
+    <%= yield %>
 
   </div>
 
