--- a/app/assets/stylesheets/application/buttons.css.scss
+++ b/app/assets/stylesheets/application/buttons.css.scss
@@ -1,9 +1,34 @@
 .button {
   @include border-radius(2px);
-  background: $primary-color;
+  background: $button-color;
   color: white;
-  padding: $lh / 2 $lh;
-  font-size: 14px;
+  padding: 10px 24px;
+  font-size: 18px;
+  position: relative;
+
+  &:hover {
+    background-color: $button-color-hover;
+    color: white;
+  }
+
+  &.with-ico {
+    padding-left: 50px;
+  }
+
+  .ico {
+    top: -4px;
+    left: 16px;
+  }
+
+  &.inset {
+    @include box-shadow(inset 1px 1px 3px #C9C9C9);
+    background-color: #E2E2E2;
+
+    &:hover {
+      @include box-shadow(inset 1px 1px 3px darken(#C9C9C9, 10%));
+      background-color: darken(#E2E2E2, 10%);
+    }
+  }
 }
 
 a.button {
