--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>Gooutfit</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= render "layouts/stylesheets" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -13,40 +12,32 @@
       <div class="content">
         <ul class="left" id="main-menu">
           <li class="logo"><%= link_to "GoOutfit", root_url %></li>
-          <li class="current"><%= link_to "Outfits", root_url %></li>
+          <li class="current"><%= link_to "Outfits", outfits_path %></li>
           <li><%= link_to "Community", root_url %></li>
           <li><%= link_to "Shop", root_url %></li>
         </ul>
         <ul class="right" id="user-menu">
-          <li><%= link_to "Melanie", root_url %></li>
+          <% if user_signed_in? %>
+            <li>
+              <%= link_to user_path(current_user), class: "me" do %>
+                <%= image_tag current_user.avatar.miniature.url %>
+                <span><%= current_user.login %></span>
+              <% end %>
+            </li>
+          <% else %>
+            <li><%= link_to "Log in with Facebook", "/auth/facebook", class: "button" %></li>
+          <% end %>
         </ul>
       </div>
     </nav>
 
-    <header id="header" class="content dark">
-
-      <div id="intro">
-        <h1>GoOutfit</h1>
-        <h2>
-          <%= link_to "", class: "snap-ico with-ico" do %>
-            <span class='ico'></span>Snap
-          <% end %>
-          <%= link_to "", class: "share-ico with-ico" do %>
-            <span class='ico'></span>Share
-          <% end %>
-          <%= link_to "", class: "decide-ico with-ico" do %>
-            <span class='ico'></span>Decide
-          <% end %>
-        </h2>
-        <p>Take pictures of your outfits, share them, and we'll help you decide what to wear!</p>
-      </div>
-
-    </header>
-
-
     <%= yield %>
 
-  </div>
+    <footer id="footer" class="content dark">
+      <h1>/</h1>
+    </footer>
 
+  </div>
+  <%= render "layouts/javascripts" %>
 </body>
 </html>
